switch to jdk8