@@ -39,7 +39,7 @@ public class InputProcessor {
     @Param({"131072"})
     public int ringBufferSize;
 
-    @Param({"false"})
+    @Param({"true", "false"})
     public boolean shouldJournal;
 
     public static void main(String[] args) throws IOException {
@@ -48,10 +48,10 @@ public class InputProcessor {
     }
 
     @Benchmark
-    @Warmup(iterations = 0)
-    @Measurement(iterations = 1)
+    @Warmup(iterations = 1)
+    @Measurement(iterations = 2)
     @BenchmarkMode(Mode.AverageTime)
-    @Fork(value = 1, warmups = 0, jvmArgsAppend = {"-Xlog:gc*:out/gc_s_1B.log:time,level,tags", "-Xms4g", "-Xmx4g", "-XX:+UseStringDeduplication"})
+    @Fork(value = 1, warmups = 0, jvmArgsAppend = {"-Xms8g", "-Xmx8g", "-XX:+UseStringDeduplication"})
     public void benchmarkDisruptor() throws ExecutionException, InterruptedException {
         MyFileWriter.printToFile(Constants.PERF_D, "-------------" + ringBufferSize + "-----------");
 
